# nba-standings-progression

./: .gitattributes  .gitignore  LICENSE  README.md  environment.yml  main.py  pyproject.toml  setup.cfg  tox.ini  win_percent.py
doc/: design-doc.md
docs/: conf.py  index.rst
notebooks/: design_doc.ipynb  panda_test.ipynb  web_scrapping_test.ipynb
src/: constants.py  generate_plots.py  main.py  standings_progression.py
src/nba_standings_progression/: __about__.py  constants.py  core.py  generate_plots.py  nba_standings_progression.py
src/standings_progression/: __about__.py  __init__.py
standings_data/: 2017_east_standings_by_date.xlsx  2017_west_standings_by_date.ods  2017_west_standings_by_date.xlsx  2018_east_standings_by_date.ods  2018_east_standings_by_date.xlsx  2018_west_standings_by_date.ods  2018_west_standings_by_date.xlsx  2019_east_standings_by_date.ods  2019_east_standings_by_date.xlsx  2019_west_standings_by_date.ods  2019_west_standings_by_date.xlsx
test/: standings_progression_test.py
tests/: standings_progression_test.py  test_standings_progression.py
