[metadata]
name = nba_standings_progression
version = 0.0.1
author = Stephen Young
author_email = stephen.m.young@protonmail.com
description = Visualize the progression of the NBA regular season standings
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >= 3.7

[options.packages.find]
where = src